# evolve-anything

./: .env.template  .gitignore  README.md  pyproject.toml
evolve_anything/core/: __init__.py  novelty_judge.py  patch_metadata.py  runner.py  sampler.py  summarizer.py  wrap_eval.py
evolve_anything/database/: __init__.py  dbase.py  display.py  inspirations.py  islands.py  map_elites.py  parents.py
evolve_anything/edit/: __init__.py  apply_diff.py  apply_full.py
evolve_anything/launch/: __init__.py  sandbox.py  scheduler.py
evolve_anything/llm/: __init__.py  dynamic_sampling.py  embedding.py  llm.py  query.py
evolve_anything/llm/models/: __init__.py  base.py  local_embedding.py  openrouter.py  openrouter_embedding.py  result.py
evolve_anything/prompts/: __init__.py  prompts_base.py  prompts_cross.py  prompts_diff.py  prompts_full.py  prompts_meta.py
evolve_anything/utils/: format_config.py  web_search.py
evolve_anything/utils/plots/: __init__.py  code_path_anim.py  plot_embeddings.py  plot_improvement.py
evolve_anything/webui/: run_viewer.sh  streamlit_app.py
examples/anthropic_take_home/: evaluate.py  initial.py  run_evo.py  run_tests.py
examples/arc_agi_2/: evaluate.py  initial.py  run_batch.py  run_evo.py
examples/circle_packing/: evaluate.py  run_evo.py
tests/: sandbox_tests.py  test_slurm_scheduler.py  test_web_agent.py
